<resources>
    <string name="app_name">Secret</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in_short">sign In</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_Login">Login</string>
    <string name="error_invalid_password">Please Enter Valid Password</string>
    <string name="error_field_required">Valid Email Address is Required</string>
    <string name="error_invalid_email">Enter a valid Email</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_register">Register</string>
    <string name="register_logo_header_text">Secret</string>
    <string name="register_header_text">Register your Secret Account</string>
    <string name="agree_on_terms">Agree for Terms and Conditions</string>
    <string name="register_already_have_account">Already Have Account?</string>
    <string name="error_invalid_first_name">Please Enter Your First name</string>
    <string name="error_agree_on_terms">Please Check on Agree Terms Checkbox</string>
    <string name="action_forgot_password">Reset Password</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_profile">Profile</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
</resources>
