<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".IndexActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_login"
        android:orderInCategory="200"
        android:title="@string/action_Login"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_register"
        android:orderInCategory="300"
        android:title="@string/action_register"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_forgot_password"
        android:orderInCategory="400"
        android:title="@string/action_forgot_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="500"
        android:title="@string/action_profile"
        app:showAsAction="never" />
</menu>
